# baum-project

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml  critical-path-tests.yml
backend/: .env.example  alembic.ini  docker-compose.test.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0366cf091cf2_initial_migration_create_all_core_.py
backend/app/: main.py
backend/app/core/: config.py  database.py  test_database.py
backend/app/models/: __init__.py  base.py  campaign.py  client.py  craftsman.py  enums.py  item.py  project.py  quote.py  task.py  user.py
backend/app/routers/v1/: __init__.py  campaigns.py  clients.py  craftsmen.py  health.py  items.py  projects.py  quotes.py  tasks.py  users.py
backend/app/schemas/: __init__.py  base.py  campaign.py  client.py  craftsman.py  item.py  project.py  quote.py  task.py  user.py
backend/app/services/: __init__.py  base.py  campaign.py  client.py  craftsman.py  item.py  project.py  quote.py  task.py  user.py
backend/app/workers/: __init__.py
backend/docs/: postgresql-testing.md
backend/tests/: conftest.py  test_api.py  test_basic_import.py  test_database.py  test_migrations.py  test_models.py  test_projects_endpoints.py  test_quotes_endpoints.py  test_users_endpoints.py
docs/: entity_diagram.html  graph.md  implementation-plan.md  project_description.md
